Fix for tooltips positioned on the wrong side of the screen on smaller screens

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -47,6 +47,7 @@
   }
   @media screen and (max-height: 768px) {
     .control-tools {
+      button:focus [role=tooltip],
       button:hover [role=tooltip] {
         right: auto;
         margin-left: 1.5em;
